
                CHANGES IN party VERSION 0.9-98 (2008-08-29)

    o   don't compute ordering of censored variables (thanks to
        Brian D. Ripley for the report)

    o   experimental version of partialPlot for cforests


                CHANGES IN party VERSION 0.9-97 (2008-06-26)

    o   predictions for new data containing missing values were
        wrong. Bug spotted by Wei-Yin Loh <loh@stat.wisc.edu>

    o   vignette updates


                CHANGES IN party VERSION 0.9-96 (2008-06-06)

    o   make searching for surrogate splits a little more stable


                CHANGES IN party VERSION 0.9-95 (2008-02-27)

    o   proximity() now gives _relative_ numbers 
        (similar to `randomForest'), not absolute numbers
        long-standing feature request by Henric Nilsson


                CHANGES IN party VERSION 0.9-94 (2008-01-30)

    o   documentation updates


                CHANGES IN party VERSION 0.9-93 (2007-11-30)

    o   It is now an error to ask for more surrogate variables
        than actually available. Thanks to Henric Nilsson.


                CHANGES IN party VERSION 0.9-92 (2007-11-22)

    o   predict(<ctree-object>) computed predictions
        for observations with zero weights (by passing them down the tree).
        This was already done this way by predict(<cforest-object>) but resulted
        in an error for ctree()s.

    o   minbucket added to ctree_control()


                CHANGES IN party VERSION 0.9-91 (2007-09-26)

    o   bugfix: NAs in factors lead to segfaults on 64bit machines
        as reported by Carolin Strobl <carolin.strobl@lmu.de>

    o   related to this: be more careful when splitting in
        variables containing missing values, especially factors.

    o   add examples to regression tests

    o   new function `proximity' (feature request by Henric Nilsson)


                CHANGES IN party VERSION 0.9-90 (2007-09-24)

    o   new defaults for `control' argument of `cforest': unbiased