@@ -1,5 +1,5 @@
 
-R version 2.7.0 (2008-04-22)
+R version 2.7.1 (2008-06-23)
 Copyright (C) 2008 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
@@ -23,14 +23,6 @@ Loading required package: splines
 Loading required package: grid
 Loading required package: modeltools
 Loading required package: stats4
-
-Attaching package: 'modeltools'
-
-
-	The following object(s) are masked from package:survival :
-
-	 cluster 
-
 Loading required package: coin
 Loading required package: mvtnorm
 Loading required package: zoo
@@ -330,4 +322,15 @@ Error in model@fit(data, ...) :
 > try(foo(6))
 Error in model@fit(data, ...) : 
   cannot set up 6 surrogate splits with only 4 ordered input variable(s)
+> 
+> ### variance = 0 due to constant variables
+> ### spotted by Sebastian Wietzke <Sebastian.Wietzke@axa.de>
+> v <- rep(0,20)
+> w <- rep(0,20)
+> x <- 1:20
+> y <- rep(1,20)
+> z <- c(4,5,8,2,6,1,3,6,8,2,5,8,9,3,5,8,9,4,6,8)
+> tmp <- ctree(z ~ v+w+x+y,controls = ctree_control(mincriterion = 0.80,
++              minsplit = 2, minbucket = 1, testtype = "Univariate", teststat = "quad"))
+> stopifnot(all(tmp@tree$criterion$criterion[c(1,2,4)] == 0))
 > 
